2002-04-22  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl.el (erl-run-process): Uncaught errors in processes
	are now caught by the scheduler, which terminates the process and
	then continues.

2002-04-21  Luke Gorrie  <luke@bluetail.com>

	*  elisp/*.el: XEmacs compatibility fixes.

2002-04-20  Luke Gorrie  <luke@bluetail.com>

	* elisp/*.el: Added 'receive' construct, and updated existing
	programs to use it.
